--- a/static/index.html
+++ b/static/index.html
@@ -25,12 +25,12 @@
 			<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 			<!-- p means paragraph -->
 			<div class="jumbotron">
-				<h1>Michael Bernstein</h1>
-				<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+				<h1>Sophie Ye</h1>
+				<p>computer science &middot; psychology &middot; philosophy</p>
 			</div>
 
 
-			<h4>Projects</h4>
+			<h4>Projects of CS 147</h4>
 			<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
 			<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 			<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
