added content, centered the links

--- a/static/index.html
+++ b/static/index.html
@@ -22,18 +22,16 @@
 <body>
 	<div class="container">
 		<div>
-			<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
-			<!-- p means paragraph -->
 			<div class="jumbotron">
-				<h1>Sophie Ye</h1>
+				<h1><i>Sophie Ye</i></h1>
 				<p>computer science &middot; psychology &middot; philosophy</p>
 			</div>
 
 
 			<h4>Projects of CS 147</h4>
-			<!-- divs are invisible structuring elements that stack vertically by default. Use them to organize your code -->
-			<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
-			<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
+			<P>Here are some of the cool things that we'll have finished by the end of the quarter.</p>
+
+			<center>
 			<div id="project1" class="project">
 				<a href="project.html" class="thumbnail">
 					<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image" class="img">
@@ -82,6 +80,8 @@
 					<p>Design tools</p>
 				</a>
 			</div>
+			</center>
+			<p>Hope I'll get to share some of these with you in the future. Have a good one :-)</p>
 		</div>
 	</div>
 
